--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@langchain/community": "^0.3.55",
+    "@langchain/openai": "^0.6.11",
+    "@mozilla/readability": "^0.6.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -38,7 +41,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -50,24 +52,38 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.23.12",
+    "html-docx-js": "^0.3.1",
     "input-otp": "^1.2.4",
+    "jsdom": "^26.1.0",
+    "langchain": "^0.3.33",
     "lucide-react": "^0.446.0",
+    "mammoth": "^1.10.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "openai": "^4.62.1",
+    "pdf-parse": "^1.1.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
-    "zod": "^4.1.5"
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/html-docx-js": "^0.3.4",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.3.1",
+    "@types/pdf-parse": "^1.1.5"
   }
 }
