fixed prisma issue

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/openai": "^0.6.11",
     "@mozilla/readability": "^0.6.0",
     "@next/swc-wasm-nodejs": "13.5.1",
+    "@prisma/client": "^6.16.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -84,6 +85,7 @@
     "@types/html-docx-js": "^0.3.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.3.1",
-    "@types/pdf-parse": "^1.1.5"
+    "@types/pdf-parse": "^1.1.5",
+    "prisma": "^6.16.0"
   }
 }
