--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.23.12",
     "html-docx-js": "^0.3.1",
+    "html-to-docx": "^1.8.0",
     "input-otp": "^1.2.4",
     "jsdom": "^26.1.0",
     "langchain": "^0.3.33",
@@ -87,6 +88,7 @@
   },
   "devDependencies": {
     "@types/html-docx-js": "^0.3.4",
+    "@types/html-to-docx": "^1.8.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.3.1",
     "@types/pdf-parse": "^1.1.5",
