--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/render": "^1.2.3",
+    "@sparticuz/chromium": "^140.0.0",
+    "@sparticuz/chromium-min": "^140.0.0",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -67,7 +69,12 @@
     "next-themes": "^0.3.0",
     "openai": "^4.62.1",
     "pdf-parse": "^1.1.1",
+    "pdf-ts": "^0.0.2",
+    "pdfjs-dist": "^5.4.149",
+    "playwright": "^1.55.1",
+    "playwright-core": "^1.55.1",
     "postcss": "8.4.30",
+    "puppeteer-core": "^24.22.3",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
