--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "zustand": "^4.5.2",
     "@hookform/resolvers": "^5.2.1",
     "@langchain/community": "^0.3.55",
     "@langchain/openai": "^0.6.11",
