resume builder feature

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "zustand": "^4.5.2",
     "@hookform/resolvers": "^5.2.1",
     "@langchain/community": "^0.3.55",
     "@langchain/openai": "^0.6.11",
@@ -69,6 +68,7 @@
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "openai": "^4.62.1",
+    "pagedjs": "^0.4.3",
     "pdf-parse": "^1.1.1",
     "pdf-ts": "^0.0.2",
     "pdfjs-dist": "^5.4.149",
@@ -94,7 +94,8 @@
     "tesseract.js": "^6.0.1",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/html-docx-js": "^0.3.4",
